# dsa

./: .gitignore  README.md  pyproject.toml  tox.ini
src/: lab.py
src/linkedlist/: 0_linkedlist.py  __init__.py  linkedlist.py
tests/: test_linkedlist.py
